# loyaltyaas

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: domain.py  main.py
tests/: test_app.py
